# TIDE

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
tests/: test_main.py
tide/: __init__.py  _tide.py  calc.py  prebinning.py
