[project]
authors = [{name = "Leonid Garin", email = "leonidgarin97@gmail.com"}]
name = "tide"
version = "0.3.4"
description = "Time Invariant Discretization Engine - tool for time stable binning"
dependencies = ["numpy","scipy","tqdm","pandas","matplotlib","scikit-learn"]
requires-python = ">=3.8"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: MIT License",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["tide*"]
